force-app/main/default/objects/Vinculo_demo_rapida_ativo__c/Vinculo_demo_rapida_ativo__c.object-meta.xml
<CustomObject>
    <label>Vínculo demo rápida - ativo</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vínculos demo rápida - ativo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>