force-app/main/default/objects/Vinculo_demo_rapida_ativo__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <label>Ativo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Demonstrações Rápidas</relationshipLabel>
    <relationshipName>VInculos_demo_rapida_ativo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>