force-app/main/default/objects/Vinculo_demo_rapida_ativo__c/fields/Data_Final__c.field-meta.xml
<CustomField>
    <fullName>Data_Final__c</fullName>
    <formula>Registro_de_demo_rapida__r.Data_de_termino_da_demonstracao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Final</label>
    <type>Date</type>
</CustomField>